test a cese when user enters 0 as its height and show appropiate message

--- a/src/style.css
+++ b/src/style.css
@@ -1,6 +1,6 @@
 body {
   background-image: url("BMI.jpg");
-  background-color: paleturquoise;
+  background-color: gray;
   background-size: cover;
 }
 h1,
